--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:e2e:non-smoke": "npx playwright test tests-examples/ --grep-invert @smoke --project=firefox",
     "test:visual:acme": "npx playwright test example-applitools.spec.ts --project=chromium",
     "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests",
-    "test": "npx cucumber-js -p test_runner --tags @register"
+    "test": "npx cucumber-js -p test_runner --tags @login & node ./htmlReportGenerator.js",
+    "test2": "npx cucumber-js -p test_runner --tags @login & node "
   },
   "keywords": [],
   "author": "",
