--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "test:e2e:non-smoke": "npx playwright test tests-examples/ --grep-invert @smoke --project=firefox",
     "test:visual:acme": "npx playwright test example-applitools.spec.ts --project=chromium",
     "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests",
-    "test": "npx cucumber-js -p test_runner --tags @login & node ./htmlReportGenerator.js",
-    "test2": "npx cucumber-js -p test_runner --tags @login & node "
+    "test": "npx cucumber-js -p test_runner --tags @profile & node ./htmlReportGenerator.js",
+    "test:allure": "cucumber-js -p test_runner --tags @registerPassing & allure generate ./allure-results --clean -o ./allure-report",
+    "allure:open": "allure open ./allure-report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.27"
+    "@types/node": "^20.11.27",
+    "allure-commandline": "^2.29.0",
+    "allure-cucumberjs": "^3.0.0-beta.3",
+    "allure-js-commons": "^3.0.0-beta.3"
   },
   "dependencies": {
     "@cucumber/cucumber": "^10.3.1",
