--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:visual:acme": "npx playwright test example-applitools.spec.ts --project=chromium",
     "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests",
     "test": "npx cucumber-js -p test_runner --tags @profile & node ./htmlReportGenerator.js",
-    "test:allure": "cucumber-js -p test_runner --tags @resetNonPassing & allure generate ./allure-results --clean -o ./allure-report",
+    "test:allure": "cucumber-js -p test_runner --tags @registerAll & allure generate ./allure-results --clean -o ./allure-report",
     "allure:open": "allure open ./allure-report"
   },
   "keywords": [],
